--- a/client/assets/locales/locale-en_US.json
+++ b/client/assets/locales/locale-en_US.json
@@ -58,6 +58,7 @@
   "ALL_ROLES": "No role selected",
   "ALL_DAYS": "No day selected",
   "ALL_REALMS": "No realm selected",
+  "ALL_ZONES": "No zone selected",
   "SELECT_ALL": "Select all",
   "SELECT_NONE": "Select none",
   "RESET": "Reset",
@@ -239,5 +240,22 @@
   "TIMEZONE_9.5": "(GMT +9:30) Adelaide, Darwin",
   "TIMEZONE_10.0": "(GMT +10:00) Eastern Australia, Guam, Vladivostok",
   "TIMEZONE_11.0": "(GMT +11:00) Magadan, Solomon Islands, New Caledonia",
-  "TIMEZONE_12.0": "(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka"
+  "TIMEZONE_12.0": "(GMT +12:00) Auckland, Wellington, Fiji, Kamchatka",
+  "EU--DE_DE--EUROPE/PARIS":"German (EU)",
+  "EU--EN_GB--EUROPE/PARIS":"English (EU)",
+  "EU--ES_ES--EUROPE/PARIS":"Spanish (EU)",
+  "EU--FR_FR--EUROPE/PARIS":"French (EU)",
+  "EU--IT_IT--EUROPE/PARIS":"Italian (EU)",
+  "EU--PT_BR--EUROPE/PARIS":"Portuguese (EU)",
+  "EU--RU_RU--EUROPE/PARIS":"Russian (EU)",
+  "KR--KO_KR--ASIA/SEOUL": "Korean (KR)",
+  "TW--ZH_TW--ASIA/TAIPEI": "Taiwanese (TW)",
+  "US--EN_US--AMERICA/CHICAGO": "Chicago (US)",
+  "US--EN_US--AMERICA/DENVER": "Denver (US)",
+  "US--EN_US--AMERICA/LOS_ANGELES": "Los Angeles (US)",
+  "US--EN_US--AMERICA/NEW_YORK": "New York (US)",
+  "US--EN_US--AUSTRALIA/MELBOURNE": "Oceanic (US)",
+  "US--ES_MX--AMERICA/CHICAGO": "Latin America (US)",
+  "US--PT_BR--AMERICA/SAO_PAULO": "Brazil (US)"
+
 }
